--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <div id="startline"></div>
             <div id="finishline"></div> -->
         </canvas>
-
+        <div id="dead"></div>
 
     </div>
 
