temp backgrounds, collapse lava

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <div id="finishline"></div> -->
         </canvas>
         <div id="dead"></div>
+        <input id="retrybutton" type="button" value="Retry">
 
     </div>
 
