trying to get highscore to work

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <script src="frog.js" defer></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Hanalei+Fill&display=swap" rel="stylesheet">
+    <script src="frog.js"></script>
 </head>
 <body>
     <div id="start">
@@ -16,6 +18,10 @@
         <aside id="movement-keys"><h3>Use W, A, S, D to move forward, left, back, and right</h3></aside>
         <input id="startButton" type="button" value="Start Game">
     </div>
+    <h4 id="score">Highscore:</h4>
+    <h4 id="scoreone">1.</h4>
+    <h4 id="scoretwo">2.</h4>
+    <h4 id="scorethree">3.</h4>
     
     
     <div id="gameOn" style="font-family: Press Start 2P;">
